[gd_scene load_steps=3 format=3 uid="uid://cwtuskfpjx053"]

[ext_resource type="Script" path="res://ui/player_hud.gd" id="1_jvnbh"]

[sub_resource type="LabelSettings" id="LabelSettings_ydmsw"]
font_size = 12

[node name="player_hud" type="CanvasLayer"]
script = ExtResource("1_jvnbh")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 76.0
offset_bottom = 65.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 79.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.129412, 0.129412, 0.631373)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
offset_right = 62.0
offset_bottom = 59.0

[node name="Label_HP" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "HP: 100"
label_settings = SubResource("LabelSettings_ydmsw")

[node name="Label_Powerup" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Power up: "
label_settings = SubResource("LabelSettings_ydmsw")

[node name="Label_CurrentBuff" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Buff used"
label_settings = SubResource("LabelSettings_ydmsw")
